# Raft

./: .gitignore  CMakeLists.txt  README.md
include/: Candidat.hpp  Follower.hpp  Heartbeat.hpp  IdentityMessage.hpp  Leader.hpp  Log.hpp  RaftServer.hpp  Server.hpp  ServerState.hpp  ServerStateWrapper.hpp  basic.hpp
references/: ServerClientLib.cmake
scripts/: launch.sh
src/: Candidat.cpp  Client.cpp  Follower.cpp  IdentityMessage.cpp  Leader.cpp  Log.cpp  RaftServer.cpp  Server.cpp  ServerStateWrapper.cpp  client.cpp  main.cpp
